docs: ensure proper spacing between headers and uxdot-example

--- a/docs/styles/styles.css
+++ b/docs/styles/styles.css
@@ -177,6 +177,10 @@
     margin-block-start: var(--rh-space-2xl, 32px);
   }
 
+  :where(uxdot-copy-permalink, h1, h2, h3 ,h4, h5 ,h6) + uxdot-example {
+    margin-block-start: var(--rh-space-lg, 16px);
+  }
+
   figure uxdot-example {
     margin-block-end: 0;
   }
